Cleaning up startup scripts - AIRAVATA-1793